objects/blng__CreditNote__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>AccountCreditNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <inlineHelpText>Amount allocated to Invoices</inlineHelpText>
        <label>Allocations</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Allocations__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c -  blng__Allocations__c +  blng__Unallocations__c -  blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of the credit memo that has not been allocated or refunded</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes (Bill To Account)</relationshipLabel>
        <relationshipName>BillToAccountCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes (BillToContact)</relationshipLabel>
        <relationshipName>BillToContactCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Credit Note</relationshipLabel>
        <relationshipName>BillingFinanceBookCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Credit Note</relationshipLabel>
        <relationshipName>BillingFinancePeriodCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteDate__c</fullName>
        <label>Credit Note Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteSourceAction__c</fullName>
        <label>Credit Note Source Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CreditNoteSourceAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__EffectiveTaxDate__c</fullName>
        <label>Effective Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__EstimateTaxProcessTime__c</fullName>
        <label>Estimate Tax Process Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>-  blng__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__NetAllocations__c</fullName>
        <formula>blng__Allocations__c -  blng__Unallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net allocation is Allocations - Unallocations.</inlineHelpText>
        <label>Net Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <inlineHelpText>Sum of refund amount of all credit note lines</inlineHelpText>
        <label>Refunds</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Refunds__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RelatedInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Invoice</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Draft Invoices would not be available</errorMessage>
            <filterItems>
                <field>blng__Invoice__c.blng__InvoiceStatus__c</field>
                <operation>notEqual</operation>
                <value>Draft</value>
            </filterItems>
            <infoMessage>Draft Invoices would not be available</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>InvoiceCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <inlineHelpText>Current status of the credit memo. Can be: Draft Posted Canceled</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Subtotal__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <summarizedField>blng__CreditNoteLine__c.blng__TaxAmount__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet2__c</fullName>
        <label>Tax Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <summarizedField>blng__CreditNoteLine__c.blng__TotalAmount__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <label>Unallocations</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Unallocations__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Credit Note</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__CreditNoteDate__c</columns>
        <columns>blng__TotalAmount__c</columns>
        <columns>blng__Allocations__c</columns>
        <columns>blng__Unallocations__c</columns>
        <columns>blng__Balance__c</columns>
        <columns>blng__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>